gcc/testsuite/rust/rustc/ui/parser/help-set-edition-ice-122130.rs
enum will {
    s#[c"owned_box"]
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
}

